tenzir/integration/data/reference/expression/test_universal_function_call_syntax/step_02.ref
error: expected additional positional argument `prefix`
 --> /dev/stdin:1:17
  |
1 | from { x: "abc".starts_with() }
  |                 ^^^^^^^^^^^ 
  |
  = usage: starts_with(x:string, prefix:string)
  = docs: https://docs.tenzir.com/tql2/functions/starts_with